--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -45,12 +45,12 @@
 
   &__photo-full {
     background-image: url("../images/current-events/current_events-3.png");
+    background-size: cover;
     position: absolute;
     left: 0;
     right: 0;
     height: 210px;
     width: 100%;
-    object-fit: cover;
     margin-bottom: 0;
     z-index: -1;
 
@@ -65,6 +65,9 @@
     @include onDesktop {
       height: 550px;
       grid-column: 1 / -1;
+      left: -55px;
+      right: -55px;
+      width: calc(100% + 110px);
     }
   }
 
