--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -17,6 +17,12 @@
       "main"
       "footer";
     overflow-x: hidden;
+
+    &--with-menu {
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.25);
+      pointer-events: none;
+    }
   }
 
   &__art-museum {
