--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -12,3 +12,16 @@ a {
 li {
   list-style: none;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #0f0e08;
+  transition: background-color 5000s ease-in-out 0s;
+}
