--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -466,6 +466,11 @@ body {
       max-width: 100%;
       max-height: 100%;
       height: 100%;
+      transition: 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 }
@@ -645,6 +650,11 @@ input[type="radio"]:checked {
     background-size: cover;
     width: 24px;
     height: 24px;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &-instagram {
@@ -653,6 +663,11 @@ input[type="radio"]:checked {
     background-size: cover;
     width: 24px;
     height: 24px;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
 
@@ -780,6 +795,15 @@ input[type="radio"]:checked {
   border: 1px solid $green;
   border-radius: 100%;
   display: none;
+}
+
+.footer__link {
+  color: $black;
+  text-decoration: none;
+  font-family: "IBM Plex Sans";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
 }
 
 @media (min-width: 1280px) {
@@ -1158,5 +1182,12 @@ input[type="radio"]:checked {
 
   .weekend {
     width: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  .day {
+    row-gap: 0;
+    flex-direction: column;
   }
 }
