--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,11 +1,13 @@
 .header {
   &__content {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: space-between;
+    padding-bottom: 185px;
 
     @include onTablet {
       flex-direction: row;
+      padding-bottom: 0px;
     }
   }
 
@@ -25,13 +27,15 @@
   }
 
   &__left {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     flex: 1 1 50%;
     padding-inline: 20px;
+    top: 0;
 
     @include onTablet {
+      position: relative;
       padding-inline: 34px 0;
     }
 
@@ -130,7 +134,7 @@
   }
 
   &__right {
-    transform: translateY(-162%);
+    position: relative;
     display: flex;
     flex-direction: row;
     flex: 1 1 50%;
