--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,16 @@
 @import "page";
 @import "header";
 @import "banner";
+@import "h2-title";
+@import "h3-title";
 @import "h6-title";
 @import "menu";
 @import "nav";
+@import "events";
+@import "event";
+@import "lecture";
+@import "gallery";
+@import "first-row";
+@import "second-row";
+@import "subscription";
+
