--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -7,3 +7,6 @@ $text-font-family: "IBM Plex Sans", sans-serif;
 
 $accent-color: #1a5a4c;
 $title-color: #0f0e08;
+$h6-title-color: #687480;
+$event-square-color: #f14a27;
+$text-color: #4e4e4e;
