--- a/src/styles/h6-title.scss
+++ b/src/styles/h6-title.scss
@@ -1,9 +1,12 @@
 .h6-title {
   margin: 0;
-  color: #687480;
+  color: $h6-title-color;
   font-family: $text-font-family;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 100%;
+
+  @include onTablet {
+    font-size: 14px;
+  }
 }
