--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -43,7 +43,7 @@
     padding-block: 20px;
     background-color: #fff;
     width: 280px;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
       padding: 45px 55px 50px;
