--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -7,6 +7,9 @@
     display: block;
     width: 100%;
     grid-column: 1 / -1;
+    transition: scale 0.3s;
+
+    @include hover (transform, scale(1.05));
 
     @include onDesktop {
       grid-column: 1 / 8;
