--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "h3-title";
 @import "h6-title";
 @import "menu";
+@import "text";
 @import "nav";
 @import "events";
 @import "event";
@@ -17,3 +18,4 @@
 @import "first-row";
 @import "second-row";
 @import "subscription";
+@import "footer";
