--- a/src/styles/second-row.scss
+++ b/src/styles/second-row.scss
@@ -10,6 +10,9 @@
           grid-column: span 8;
           height: 100%;
           width: 100%;
+          transition: scale 0.3s;
+
+          @include hover (transform, scale(1.05));
         }
       }
 
@@ -17,6 +20,9 @@
         grid-column: span 4;
         width: 100%;
         height: 100%;
+        transition: scale 0.3s;
+
+        @include hover (transform, scale(1.05));
       }
     }
   }
