--- a/src/styles/first-row.scss
+++ b/src/styles/first-row.scss
@@ -11,6 +11,9 @@
     &--1 {
       height: 410px;
       margin-inline: auto;
+      transition: scale 0.3s;
+
+      @include hover (transform, scale(1.05));
 
       @include onTablet {
         margin: 0;
@@ -21,7 +24,6 @@
         grid-column: span 4;
         height: 100%;
         width: 100%;
-        object-fit: cover;
       }
     }
 
@@ -29,7 +31,9 @@
       grid-column: span 8;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      transition: scale 0.3s;
+
+      @include hover (transform, scale(1.05));
     }
 
     &--hidden {
@@ -37,6 +41,9 @@
 
       @include onDesktop {
         display: block;
+        transition: scale 0.3s;
+
+        @include hover (transform, scale(1.05));
       }
 
       &--desktop {
@@ -44,6 +51,9 @@
 
         @include onTablet {
           display: block;
+          transition: scale 0.3s;
+
+          @include hover (transform, scale(1.05));
         }
 
         @include onDesktop {
