--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -5,6 +5,9 @@
     display: block;
     width: 100%;
     height: 210px;
+    transition: scale 0.3s;
+
+    @include hover (transform, scale(1.05));
 
     @include onTablet {
       display: none;
