--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -2,6 +2,12 @@
   background-color: $accent-color;
   color: #fff;
 
+  &__icon {
+    transition: all 0.3s;
+
+    @include hover (transform, scale(1.2));
+  }
+
   &__nav {
     display: flex;
     flex-direction: row;
@@ -56,7 +62,7 @@
     width: 280px;
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
-    align-self: center;
+    align-self: left;
 
     @include onTablet {
       width: 1px;
@@ -106,18 +112,6 @@
       @include onDesktop {
         width: 30%;
       }
-    }
-  }
-
-  &__text {
-    margin: 0;
-    font-family: $text-font-family;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 150%;
-
-    &-bold {
-      font-weight: 600;
     }
   }
 }
