--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -33,14 +33,14 @@
   --column: 2;
   display: grid;
   column-gap: 20px;
-  grid-template-columns: repeat(var(--columns), 1fr);
+  grid-template-columns: repeat(var(--column), 1fr);
 
   @include onTablet() {
-    --columns: 6;
+    --column: 6;
     column-gap: 30px;
   }
 
   @include onDesktop() {
-    --columns: 12;
+    --column: 12;
   }
 }
