--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -1,6 +1,4 @@
 .banner {
-
-  position: relative;
   width: 100%;
 
   &__image {
@@ -40,6 +38,25 @@
     @include onDesktop {
       width: 170px;
       right: 555px;
+    }
+
+    &--icon {
+      position: absolute;
+      width: 55px;
+      height: 61px;
+      align-items: center;
+
+      @include onTablet {
+        left: 0;
+        right: 154px;
+
+        width: 220px;
+        height: 72px;
+      }
+
+      @include onDesktop {
+        right: 555px;
+      }
     }
   }
 }
