--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,13 +1,10 @@
 .header {
   &__content {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    padding-bottom: 185px;
+    position: relative;
+    @include pageGrid;
 
     @include onTablet {
-      flex-direction: row;
-      padding-bottom: 0;
+      @include pageGrid;
     }
   }
 
@@ -16,6 +13,8 @@
     height: 24px;
     bottom: 0;
     margin-top: 27px;
+    z-index: 1;
+    padding-left: 20px;
 
     @include onTablet {
       margin-top: 39px;
@@ -32,20 +31,19 @@
   }
 
   &__left {
-    position: absolute;
     display: flex;
     flex-direction: column;
-    flex: 1 1 50%;
-    padding-inline: 20px;
     top: 0;
+    grid-column: span 2;
 
     @include onTablet {
-      position: relative;
-      padding-inline: 34px 0;
+      padding-left: 34px;
+      grid-column: span 3;
     }
 
     @include onDesktop {
-      padding-inline: 55px 0;
+      padding-left: 55px 0;
+      grid-column: span 5;
     }
   }
 
@@ -143,18 +141,17 @@
 
   &__right {
     position: relative;
-    display: flex;
-    flex-direction: row;
-    flex: 1 1 50%;
-    z-index: -1;
+    grid-column: span 2;
+    top: -480px;
+    height: 0;
 
     @include onTablet {
-      transform: translateY(0);
-      flex-direction: column;
+      top: 0;
+      grid-column: span 3;
     }
 
     @include onDesktop {
-      flex: 1 1 72.5%;
+      grid-column: span 7;
     }
   }
 
@@ -163,14 +160,12 @@
 
     @include onDesktop {
       position: absolute;
+      bottom: 0;
       display: inline-flex;
       gap: 20px;
       align-items: center;
       flex-direction: column;
-      justify-content: flex-end;
-      bottom: 0;
       width: 14px;
-      z-index: 1;
     }
 
     &--line {
