--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -138,7 +138,7 @@
 
   &__separator {
     display: inline-block;
-    margin: 20px auto 40px;
+    margin-block: 20px 40px;
     width: 280px;
     height: 1px;
     background: rgba(26, 90, 76, 0.5);
