--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -88,10 +88,19 @@
     border: 0;
     padding: 0;
     background: #f14a27;
+    align-items: center;
 
     @include onTablet {
       width: 70px;
       height: 70px;
+    }
+
+    &--icon {
+      align-self: center;
+      transition: all 0.3s;
+      cursor: pointer;
+
+      @include hover (transform, scale(1.2));
     }
   }
 }
