--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -28,5 +28,10 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
+    transition: all 0.3s;
+
+    &:hover {
+      color: #cbcbcb;
+    }
   }
 }
