add all project

--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -124,19 +124,21 @@
     border-radius: 50%;
     border: 1px solid $color-menu;
 
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
+    margin-left: auto;
     transition: 0.2s;
 
     &:hover {
       background-color: $color-button-hover;
     }
     @include hover(transform, scale(1.2));
+
+    @include onTablet {
+      display: none;
+    }
   }
 
   &__line {
-    margin-top: 70px;
+    margin-top: 20px;
     height: 1px;
     width: 100%;
     background-color: $color-menu;
