--- a/src/styles/block/top-bar.scss
+++ b/src/styles/block/top-bar.scss
@@ -1,11 +1,9 @@
 .top-bar {
   display: flex;
-  position: relative;
 
   &__header {
     align-items: center;
-    gap: 88px;
-
+    gap: 40%;
     padding-top: 9px;
 
     @include onTablet {
