--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -77,6 +77,7 @@
     display: flex;
     padding-top: 20px;
     margin: 0 auto;
+    transition: all 0.3s;
 
     @include onTablet {
       padding-top: 38px;
@@ -88,6 +89,10 @@
     @include onDesktop {
       padding-top: 89px;
       padding-left: 201px;
+    }
+
+    &:hover {
+      transform: scale(1.05);
     }
 
     &-text {
@@ -106,6 +111,7 @@
       text-align: center;
       color: $title-color;
       text-transform: uppercase;
+      transition: all 0.3s;
 
       cursor: pointer;
 
