--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,38 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin pageGrid {
+  --columns: 2;
+  display: grid;
+  gap: 20px;
+  column-width: 130px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+  }
+
+  @include onDesktop {
+    --columns: 12;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+@mixin onDesign {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
