--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -10,8 +10,10 @@
   }
 
   &--close {
+    position: absolute;
+    top: 30px;
+    left: 20px;
     display: block;
-    margin-top: 33px;
     height: 13px;
 
     background-image: url(../images/close.svg);
