fixed links and other problems

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -800,7 +800,7 @@ input[type="radio"]:checked {
 .footer__link {
   color: $black;
   text-decoration: none;
-  font-family: "IBM Plex Sans";
+  font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
@@ -949,7 +949,6 @@ input[type="radio"]:checked {
 @media (max-width: 1170px) {
   .footer__content-container {
     flex-direction: column;
-    // align-items: center;
     width: 60%;
   }
 
@@ -968,6 +967,7 @@ input[type="radio"]:checked {
     padding: 0;
     padding-top: 64px;
     border-top: 1px solid $black;
+    height: 150px;
 
     &-list {
       width: 100%;
@@ -982,6 +982,49 @@ input[type="radio"]:checked {
 }
 
 @media (max-width: 700px) {
+  .header__content {
+    align-items: center;
+  }
+
+  .intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .intro__links {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+
+    &--tickets {
+      display: flex;
+      width: fit-content;
+
+      &-text {
+        color: #0f0e08;
+        font-family: "IBM Plex Sans", sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 16px;
+        text-transform: uppercase;
+        width: 300px;
+      }
+    }
+  }
+
+  .icons__logo-logo {
+    width: fit-content;
+  }
+
+  .events {
+    margin-top: 100px;
+  }
+
+  .intro__header {
+    text-align: center;
+  }
+
   .subs__form {
     width: 100%;
     justify-content: center;
@@ -1015,6 +1058,10 @@ input[type="radio"]:checked {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .footer__nav {
+    height: 220px;
   }
 
   .license {
@@ -1167,6 +1214,10 @@ input[type="radio"]:checked {
       }
     }
   }
+
+  .intro__links--tickets-text {
+    width: 220px;
+  }
 }
 
 @media (max-width: 375px) {
@@ -1189,5 +1240,16 @@ input[type="radio"]:checked {
   .day {
     row-gap: 0;
     flex-direction: column;
+  }
+}
+
+@media (orientation: landscape) {
+  .menu {
+    overflow: scroll;
+    height: 100%;
+
+    &__content {
+      overflow: scroll;
+    }
   }
 }
