--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -32,7 +32,7 @@
   width: 50px;
   height: 50px;
   background-color: $squareColor;
-  background-image: url(../images/Vector.svg);
+  background-image: url(../images/vector.svg);
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -41,7 +41,7 @@
   width: 70px;
   height: 70px;
   background-color: $squareColor;
-  background-image: url(../images/Vector.svg);
+  background-image: url(../images/vector.svg);
   background-position: center;
   background-repeat: no-repeat;
 }
