--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -136,6 +136,10 @@ body {
         font-size: 16px;
         font-weight: 500;
         line-height: 100%;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       &-link {
@@ -171,6 +175,7 @@ body {
   justify-content: center;
   align-items: start;
   z-index: 3;
+  overflow: hidden;
 
   &:target {
     opacity: 1;
@@ -184,6 +189,7 @@ body {
     @include contentPaddingInline;
     justify-content: space-between;
     align-items: start;
+    overflow: hidden;
   }
 
 }
@@ -1243,7 +1249,7 @@ input[type="radio"]:checked {
   }
 }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-height: 425px) {
   .menu {
     overflow: scroll;
     height: 100%;
