fix logo position

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -20,13 +20,15 @@
   &__logo {
     position: absolute;
     top: 9px;
-    left: 132px;
+    left: 50%;
+    transform:translateX(-50%);
 
     width: 55px;
     height: 61px;
     align-items: center;
 
     @include onTablet {
+      transform: translateX(0);
       top: 15px;
       left: 0;
       right: 154px;
