--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,6 +9,7 @@ $onDesktopContent: 1170px;
 $main-background-color: #fff;
 $content-font: "IBM Plex Sans", "Helvetica", "Arial", sans-serif;
 $header-font: "Montserrat", "Helvetica", "Arial", sans-serif;
+$header-font-color: #0f0e08;
 
 // Modal Window
 $modal-main-background-color: #1a5a4c;
@@ -18,3 +19,7 @@ $modal-secondary-background-color: rgba(24, 24, 26, 0.5);
 $nav-font-color: #fff;
 $nav-font-color-hover: #1a5a4c;
 $nav-font-color-active: #000;
+
+// Tickets button
+$border-color: #1a5a4c;
+$background-color: #1a5a4c;
