--- a/src/styles/blocks/buy-btn.scss
+++ b/src/styles/blocks/buy-btn.scss
@@ -36,7 +36,11 @@
     justify-content: center;
     align-items: center;
     color: #d7dde3;
-    background: #1a5a4c;
+    background-color: #1a5a4c;
+    background-image: url(../images/arrow.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
     border: 1px solid #1a5a4c;
     width: 50px;
     height: 100%;
