--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -20,6 +20,20 @@
   }
 
   &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    
+    &:hover {
+      transition: 0.3s ease;
+      transform: scale(1.1);
+    }
+  }
+
+  &__img-container {
+    overflow: hidden;
+    min-width: 100%;
     display: block;
     width: 280px;
     height: 410px;
