--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,9 @@
 @import "./blocks/pagination.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/text-bold.scss";
+@import "./blocks/logo.scss";
 
 html {
   scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
 }
