--- a/src/styles/blocks/buy-btn.scss
+++ b/src/styles/blocks/buy-btn.scss
@@ -54,6 +54,7 @@
       background-color: #f14a27;
       border-color: #f14a27;
       color: #000;
+      background-image: url(../images/arrow-black.png);
     }
   }
 }
