--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -3,7 +3,7 @@
   width: 280px;
   height: 440px;
   overflow: hidden;
-  margin-bottom: 100px;
+  margin: 0 auto 100px;
 
   @include onDesktop {
     display: none;
@@ -88,7 +88,8 @@
     }
 
     @include onTablet {
-      &:last-child {
+      &--3,
+      &--4 {
         display: none;
       }
     }
@@ -96,15 +97,15 @@
 
   @include onTablet {
     &__slide {
-      text-align: center;
       height: 543px;
-      width: 100%;
 
       &--image {
-        object-position: center;
         height: 543px;
         width: 340px;
-        margin-right: 20px;
+        margin-right: 45px;
+
+        &:last-child {
+        }
       }
     }
   }
