--- a/src/styles/blocks/modal.scss
+++ b/src/styles/blocks/modal.scss
@@ -29,6 +29,10 @@
     @include onTablet {
       flex-direction: row;
     }
+
+    @include onDesktop {
+      justify-content: flex-start;
+    }
   }
 
   &__top {
@@ -46,7 +50,7 @@
 
     @include onDesktop {
       margin: 40px 102px 48px 0;
-      padding-right: 102px;
+      padding-right: 144px;
     }
   }
 
