--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -9,7 +9,13 @@
     }
 
     @include onDesktop {
-      gap: 30px;
+      gap: 26px 90px;
+    }
+  }
+
+  &__list {
+    @include onDesktop {
+      margin-left: 100px;
     }
   }
 
