add task solution

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,10 +1,17 @@
 .button {
 
   &__subcription {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
     background-color: #F14A27;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+
+    cursor: pointer;
   }
 
   &__text {
