--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -7,15 +7,79 @@
 
     padding-bottom: 20px;
 
-    &--top {
-      align-items: center;
+    row-gap: 40px;
+
+    border-bottom: 1px solid #1A5A4C80;
+
+    @include onTablet {
+      border: none;
+      row-gap: 64px;
     }
 
-    &--middle {
+    &__middle {
+      --columns: 2;
+      display: grid;
+      column-width: 130px;
+      grid-template-columns: repeat(var(--columns), 1fr);
 
-      padding-top: 40px;
+      grid-column: span 2;
 
-      border-bottom: 1px solid #1A5A4C;
+      @include onTablet {
+        padding-bottom: 64px;
+
+        --columns: 4;
+
+        grid-column: 2 / span 4;
+
+        border-bottom: 1px solid #1A5A4C80;
+      }
+
+      @include onDesktop {
+        padding-bottom: 0;
+        padding-right: 65px;
+
+        border: 0;
+
+        border-right: 1px solid #1A5A4C80;
+
+        grid-column: 3 / span 5;
+      }
+    }
+
+    &__top {
+      display: flex;
+
+      align-items: center;
+
+      gap: 62px;
+
+      grid-column: span 2;
+
+      justify-content: space-between;
+
+      @include onTablet {
+        grid-column: 1;
+
+        flex-direction: column;
+
+        align-items: start;
+
+        justify-content: flex-start;
+      }
+    }
+  }
+
+  &__bottom {
+
+    grid-column: span 2;
+
+    @include onTablet {
+      grid-column: 2 / span 3;
+    }
+
+    @include onDesktop {
+      padding-left: 45px;
+      grid-column: 8/ span 3;
     }
   }
 
@@ -23,6 +87,10 @@
     place-self: end;
 
     grid-column: 2;
+
+    @include onTablet {
+      display: none;
+    }
   }
 
   &__logo {
@@ -49,6 +117,12 @@
     justify-self: end;
 
     grid-column: 2;
+
+    @include onTablet {
+      grid-row: 2;
+      grid-column: 1;
+      justify-self: start;
+    }
   }
 
   &__schedule {
@@ -57,10 +131,16 @@
     font-size: 14px;
     line-height: 21px;
 
-    grid-column: 1;
+    grid-column: span 2;
   }
 
   &__contact-us {
-    grid-column: 2;
+    display: flex;
+
+    gap: 20px;
+
+    flex-direction: column;
+
+    grid-column: span 2;
   }
 }
