--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,7 +2,7 @@
   padding-inline: 20px;
 
   @include onTablet {
-    padding-inline: 39px;
+    padding-inline: 34px;
   }
 
   @include onDesktop {
@@ -13,5 +13,17 @@
     @include pageGrid;
 
     row-gap: 60px;
+  }
+
+  &__events {
+    padding-inline: 20px;
+
+    @include onTablet {
+      padding-inline: 99px;
+    }
+
+    @include onDesktop {
+      padding-inline: 355px;
+    }
   }
 }
