--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,11 +1,23 @@
 .events {
   padding-top: 70px;
 
+  @include  onTablet {
+    padding-top: 107px;
+  }
+
+  @include onDesktop {
+    padding-top: 315px;
+  }
+
   &__block {
     grid-column: span 2;
 
     @include onTablet {
       grid-column: span 4;
+    }
+
+    @include onDesktop {
+      grid-column: 8/span 4;
     }
 
     &--3 {
@@ -25,6 +37,8 @@
 
       @include onDesktop {
         margin-top: 552px;
+
+        grid-column: 4/span 6;
       }
     }
 
@@ -34,9 +48,12 @@
       grid-column: span 2;
 
       @include hover(box-shadow, 0.3s);
+      @include hover(scale, 0.3s);
 
       &:hover {
         box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
+
+        scale: 1.005;
       }
 
       @include onTablet {
@@ -57,12 +74,17 @@
         margin-top: 60px;
 
         @include onTablet {
+          margin-top: 112px;
           height: 390px;
           grid-column: span 6;
+          margin-inline: 2.5%;
+          width: 95%;
         }
 
         @include onDesktop {
           height: 550px;
+          width: 100%;
+          margin-inline: 0;
         }
       }
     }
@@ -76,6 +98,10 @@
 
       @include onTablet {
         padding-top: 40px;
+
+        justify-content: flex-start;
+
+        gap: 10%;
       }
 
       &--3 {
@@ -84,6 +110,12 @@
         @include onTablet {
           padding-inline: 55px;
           padding-top: 45px;
+        }
+
+        @include onDesktop {
+          justify-content: space-between;
+
+          padding-inline: 100px;
         }
       }
 
@@ -104,20 +136,31 @@
       }
     }
 
+    &__top {
+      display: flex;
+
+      align-items: center;
+
+      gap: 10px;
+
+      padding-top: 10px;
+
+      @include onTablet {
+        padding-top: 30px;
+
+        gap: 15px;
+      }
+    }
     &__title {
       font-family: "Montserrat";
       font-size: 28px;
       font-weight: 400;
       line-height: 100%;
 
-      padding-top: 10px;
-
-      @include onTablet {
-        padding-top: 30px;
-      }
-
       &--3 {
         text-align: center;
+
+        padding-top: 10px;
 
         @include onTablet {
           padding-top: 16px;
