--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -9,14 +9,20 @@
     background-image: url(../images/menu.svg);
     margin-top: 27px;
 
-    @include hover(scale, 1.2)
+    @include hover(scale, 1.2);
+
+    @include onTablet {
+      margin-top: 40px;
+    }
   }
 
   &--close {
     background-image: url(../images/close.svg);
     margin-top: 27px;
 
-    @include hover(scale, 1.2)
+    @include hover(scale, 1.2);
+
+    margin: 0;
   }
 
   &--arrow-white {
@@ -27,8 +33,6 @@
     background-image: url(../images/arrow-black.svg);
 
     position: relative;
-
-    left: 25%;
   }
 
   &--fb {
@@ -50,5 +54,17 @@
     width: 50px;
 
     @include hover(scale, 1.05);
+  }
+
+  &--cube {
+    background-image: url(../images/cube.svg);
+
+    height: 10px;
+    width: 10px;
+
+    @include onTablet {
+      height: 15px;
+      width: 15px;
+    }
   }
 }
