--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,12 +7,38 @@
   line-height: 16px;
   color: #fff;
 
+  &__content {
+    @include pageGrid;
+  }
+
   &__top {
     display: flex;
+    position: relative;
+
+    grid-column: span 2;
+
     gap: 28px;
-    box-sizing: border-box;
 
     border-bottom: 1px solid #fff;
+
+    margin-top: 27px;
+
+    @include onTablet {
+      margin-block: 40px;
+
+      gap: 38px;
+
+      grid-column: span 3;
+
+      border: none;
+      border-right: 1px solid #fff;
+    }
+
+    @include onDesktop {
+      grid-column: span 6;
+
+      gap: 102px;
+    }
   }
 
 
@@ -23,6 +49,20 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+
+    grid-column: span 2;
+
+    @include onTablet {
+      grid-column: span 3;
+
+      padding-block: 40px;
+    }
+
+    @include onDesktop {
+      grid-column: span 6;
+
+      padding-left: 82px;
+    }
   }
 }
 
