--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,6 +6,39 @@
     row-gap: 0;
   }
 
+  &__side-text {
+
+    display: none;
+
+    @include onDesktop {
+      position: absolute;
+      bottom: 0;
+      left: 55px;
+      align-self: self-end;
+
+      text-align: left;
+      display: inline-block;
+      writing-mode: vertical-rl;
+
+      transform: rotate(-180deg);
+
+      font-family: "IBM Plex Sans";
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 100%;
+      text-transform: uppercase;
+
+      &::before {
+        display: inline-block;
+        margin-bottom: 20px;
+        content: "";
+        width: 1px;
+        height: 70px;
+        background-color: #1A5A4C;
+      }
+    }
+  }
+
   &__background {
     position: absolute;
     top: 0;
@@ -23,6 +56,12 @@
       left: 50%;
 
       width: 50%
+    }
+    @include onDesktop {
+      height: 655px;
+      left: 50%;
+
+      width: 60%
     }
   }
 
@@ -56,13 +95,15 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 100%;
-    letter-spacing: 0em;
-    text-align: center;
 
     @include onTablet {
       bottom: 0;
 
       grid-column: 4/5;
+    }
+
+    @include onDesktop  {
+      grid-column: 7/8;
     }
   }
 
@@ -72,8 +113,16 @@
     grid-column: span 2;
 
     @include onTablet {
-      grid-column: 1/3;
+      grid-column: span 3;
       padding-top: 40px;
+    }
+
+    @include onDesktop {
+      padding-top: 119px;
+
+      grid-column: span 5;
+
+      grid-row: 2;
     }
   }
 
@@ -91,6 +140,17 @@
 
     @include onTablet {
       grid-column: span 3;
+      padding-bottom: 38px;
+
+      font-size: 54px;
+      line-height: 65px;
+      text-align: left;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
+      line-height: 86px;
+      padding-bottom: 89px;
     }
   }
 
@@ -106,10 +166,21 @@
 
     grid-column: span 2;
 
+
     @include onTablet {
-      grid-column: 1/3;
       height: 70px;
-      width: 120%;
+
+      width: 80%;
+
+      grid-column: span 3;
+
+      grid-row: 3;
+    }
+
+    @include onDesktop {
+      grid-column: 3/6;
+
+      width: 100%;
     }
 
     &:hover {
