--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -7,6 +7,19 @@
     line-height: 100%;
     text-align: center;
 
-    padding-bottom: 40px
+    padding-bottom: 40px;
+
+    @include onTablet {
+      padding-bottom: 48px;
+    }
+    @include onDesktop {
+      padding-bottom: 56px;
+    }
+
+    &--events {
+      @include onDesktop {
+        text-align: left;
+      }
+    }
   }
 }
