add hover-btn and  animation in img

--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -11,7 +11,8 @@
 
   &__container-img {
     margin-bottom: 20px;
-
+    transition: transform ease 0.3s;
+    
     &:hover {
       transition: transform ease 0.3s;
       transform: scale(1.1);
