--- a/src/styles/blocks/buy-btn.scss
+++ b/src/styles/blocks/buy-btn.scss
@@ -45,16 +45,28 @@
     width: 50px;
     height: 100%;
     box-sizing: border-box;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #134d40;
+    }
 
     @include inIpad {
       min-width: 70px;
     }
 
     &--footer {
+      transition: all 0.3s ease;
       background-color: #f14a27;
       border-color: #f14a27;
       color: #000;
       background-image: url(../images/arrow-black.png);
+
+      &:hover {
+        transition: all 0.3s ease;
+        background-color: #c5361a;
+        border-color: #c5361a;
+      }
     }
   }
 }
