layout Museum added

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,68 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: $font-Montserrat-700;
+  font-size: 45px;
+  line-height: 100%;
+  color: $color-black;
+  text-align: center;
+  text-transform: uppercase;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 120%;
+    text-align: start;
+    padding-bottom: 38px;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+    line-height: 120%;
+    padding-bottom: 89px;
+  }
+}
+
+%h4 {
+  font-family: $font-Plex-500;
+  font-size: 16px;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
+%h5 {
+  font-family: $font-Plex-700;
+  font-size: 14px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: $color-h5;
+}
+
+%h2 {
+  font-family: $font-Montserrat-700;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
+  color: $color-headers;
+
+  @include onTablet {
+    font-size: 48px;
+    line-height: 100%;
+    text-align: start;
+  }
+}
+
+%h3 {
+  font-family: $font-Montserrat-400;
+  font-size: 28px;
+  line-height: 100%;
+  color: $color-headers;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+%p {
+  font-family: $font-Plex-300;
+  font-size: 16px;
+  line-height: 150%;
+  color: $color-p;
 }
