--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,32 @@
-$c-gray: #eee;
+$font-Montserrat-400: "Montserrat Regular", sans-serif;
+$font-Montserrat-700: "Montserrat Bold", sans-serif;
+$font-Plex-300: "IBM Plex Sans Light", sans-serif;
+$font-Plex-400: "IBM Plex Sans Regular", sans-serif;
+$font-Plex-500: "IBM Plex Sans Medium", sans-serif;
+$font-Plex-600: "IBM Plex Sans SemiBold", sans-serif;
+$font-Plex-700: "IBM Plex Sans Bold", sans-serif;
+$transition-duration-speed: 1s;
+$delay: 1s;
+$speed-slider: 10s;
+$pageBackground: #e5e5e5;
+$header-top-padding-mobile: 10px;
+$header-top-padding-desktop: 15px;
+$menu-top-padding-desktop: 45px;
+$menu-top-padding-mobile: 27px;
+$header-bottom-padding: 230px;
+$logo-height-mobile: 61px;
+$logo-height-desktop: 72px;
+$icon-height-mobile: 12px;
+$icon-width-mobile: 18px;
+$color-black: #000;
+$main-color: #1a5a4c;
+$color-accent: #f14a27;
+$color-headers: #0f0e08;
+$color-h5: #687480;
+$color-line: rgba(255, 255, 255, 0.5);
+$color-white: #fff;
+$color-p: #4e4e4e;
+$color-dot: #e0e0e0;
+$color-orange: #f14a27;
+$size-btn-big: 70px;
+$size-btn-small: 50px;
