fix img add link in footer

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -24,6 +24,7 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    transition: 0.3s ease;
     
     &:hover {
       transition: 0.3s ease;
