cur-pointer from btn

--- a/src/styles/blocks/buy-btn.scss
+++ b/src/styles/blocks/buy-btn.scss
@@ -46,7 +46,8 @@
     height: 100%;
     box-sizing: border-box;
     transition: all 0.3s ease;
-
+    cursor: pointer;
+    
     &:hover {
       background-color: #134d40;
     }
