updated styles for footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -751,6 +751,10 @@ input[type="radio"]:checked {
   font-weight: 400;
   line-height: 100%;
   text-decoration: none;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .license {
@@ -801,6 +805,10 @@ input[type="radio"]:checked {
   border: 1px solid $green;
   border-radius: 100%;
   display: none;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .footer__link {
@@ -810,6 +818,10 @@ input[type="radio"]:checked {
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 @media (min-width: 1280px) {
