add task solution

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,9 @@
   font-weight: normal;
   font-style: normal;
 }
+// @font-face {
+//   font-family: "Montserrat";
+//   src: url("../fonts/Montserrat-VariableFont_wght.ttf") format("ttf");
+//   font-weight: normal;
+//   font-style: normal;
+// }
