add task solution

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -43,6 +43,12 @@
 
 
   &__schedule {
+    --columns: 2;
+    display: grid;
+    gap: 20px;
+    column-width: 130px;
+    grid-template-columns: repeat(var(--columns), 1fr);
+
     padding-top: 24px;
     padding-bottom: 27px;
 
