--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -12,17 +12,23 @@
     &--header {
       color: #fff;
     }
+
+    grid-column: span 2;
   }
 
   &__list {
     padding: 0;
-    margin: 0;
-    padding-top: 20px;
-    padding-bottom: 16px;
+    margin-bottom: -4px;
 
     list-style: none;
 
     font-family: "IBM Plex Sans";
+
+    grid-column: span 2;
+
+    @include onTablet {
+      grid-column: span 1;
+    }
   }
 
   &__text {
@@ -45,5 +51,13 @@
     font-family: "IBM Plex Sans";
 
     color: #fff;
+
+    &--last {
+      grid-column: span 2;
+
+      @include onTablet {
+        grid-column: span 1;
+      }
+    }
   }
 }
