--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,6 +4,8 @@
     @include pageGrid;
 
     row-gap: 0;
+
+    position: relative;
   }
 
   &__side-text {
@@ -12,8 +14,8 @@
 
     @include onDesktop {
       position: absolute;
-      bottom: 0;
-      left: 55px;
+      bottom: -110px;
+      left: 0;
       align-self: self-end;
 
       text-align: left;
