add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,12 +19,11 @@
 @import "./blocks/nav.scss";
 @import "./blocks/footer.scss";
 
-
 * {
   margin: 0;
   font-family: sans-serif;
 
-  color: #0F0E08;
+  color: #0f0E08;
 
   scroll-behavior: smooth;
 }
